--- a/swh/scanner/dashboard/static/css/dashboard.css
+++ b/swh/scanner/dashboard/static/css/dashboard.css
@@ -5,6 +5,8 @@
   --grey-lighter: #f7f7f7;
   --primary-color: #e20026;
   --secondary-color: #fecd1b;
+  --error-color: #cc0f35;
+  --error-color-light: #feecf0;
   --font-family: Helvetica, Arial, sans-serif;
   --gap: 0.4rem;
 }
@@ -71,6 +73,25 @@ p {
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
+.button {
+  display: block;
+  font-size: 1rem;
+  font-weight: bold;
+  color: white;
+  text-align: center;
+  text-decoration: None;
+  margin-top: calc(var(--gap) * 2);
+  padding: calc(var(--gap) * 2);
+  border: solid 1px var(--light-grey);
+  border-radius: var(--gap);
+  background: var(--primary-color);
+  max-width: 25%;
+}
+
+.button:hover {
+  filter: brightness(95%);
+}
+
 .card {
   text-align: center;
   padding: var(--gap);
@@ -97,6 +118,66 @@ p {
   padding: calc(var(--gap) / 2);
   margin: 0 0 0 var(--gap);
   font-size: 0.75rem;
+}
+
+.loading-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.3);
+  z-index: 9999;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.loading {
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  border: 5px solid var(--grey-lighter);
+  border-top-color: var(--secondary-color);
+  animation: loading 1s linear infinite;
+}
+@keyframes loading {
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+#notification-box {
+  display: block;
+  position: relative;
+  width: 33%;
+  margin: var(--gap) auto;
+  padding: var(--gap);
+  text-align: center;
+  background-color: var(--error-color-light);
+  color: var(--error-color);
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+#notification-box > #close-button {
+  cursor: pointer;
+  position: absolute;
+  top: var(--gap);
+  right: var(--gap);
+  width: calc(var(--gap) * 3);
+  height: calc(var(--gap) * 3);
+  background: hsla(0,0%,4%,.2);
+  border-radius: 50%;
+}
+
+#notification-box > #close-button:before {
+  content: "×";
+  color: white;
+  font-weight: bolder;
+}
+
+#notification-box.hidden {
+  display: none;
 }
 
 header {
@@ -214,19 +295,26 @@ footer {
   list-style-type: " ";
 }
 
-#selected_path > dl {
+#selected_path > section > .size-6 {
+  margin-bottom: 0;
+  padding-bottom: 0;
+  color: var(--grey);
+}
+
+#selected_path > section > dl {
   display: grid;
   grid-gap: var(--gap) calc(var(--gap) * 3);
   grid-template-columns: max-content;
   border: 1px solid var(--grey-light);
   padding: calc(var(--gap) * 3);
+  margin-top: 0;
 }
 
-#selected_path > dl > dt {
+#selected_path > section > dl > dt {
   color: var(--grey);
 }
 
-#selected_path > dl > dd {
+#selected_path > section > dl > dd {
   font-weight: bold;
   margin: 0;
   grid-column-start: 2;
