dashboard: use a green circle to indicate a fully known path
This makes it unambiguous. A future patch will make the partial case
always look at 50%, since that is more obvious and friendlier to
colorblind people.

--- a/swh/scanner/dashboard/templates/partials/tree.html
+++ b/swh/scanner/dashboard/templates/partials/tree.html
@@ -38,7 +38,12 @@
             <summary>
               <span class="pie"
                     name="pie"
-                    style="background: conic-gradient(orange {{ known_percent }}%, white 0)"></span>
+                    {% if known_percent == 100 %}
+                    style="background: #00d300">
+                    {% else %}
+                    style="background: conic-gradient(orange {{ known_percent }}%, white 0)">
+                    {% endif %}
+              </span>
               {{ k.decode() }}
             </summary>
           </details>
